--- a/index.html
+++ b/index.html
@@ -1,13 +1,52 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Budget PRO - Vanilla JS</title>
+    <script type="module" src="/main.js"></script>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <h1>Budget PRO</h1>
+    <div class="container">
+      <h4>Balance</h4>
+      <h1 id="balance">€0.00</h1>
+
+      <div class="inc-exp-container">
+        <div>
+          <h4>Income</h4>
+          <p id="money-plus" class="money plus">+€0.00</p>
+        </div>
+        <div>
+          <h4>Expense</h4>
+          <p id="money-minus" class="money minus">-€0.00</p>
+        </div>
+      </div>
+
+      <h3>Transactions</h3>
+      <ul id="list" class="list">
+        <!-- <li class="minus">
+          Cash <span>-€400</span><button class="delete-btn">x</button>
+        </li> -->
+      </ul>
+
+      <h3>Add new transaction</h3>
+      <form id="form">
+        <div class="form-control">
+          <label for="text">Description</label>
+          <input type="text" id="text" placeholder="Enter a description..." />
+        </div>
+        <div class="form-control">
+          <label for="amount">Amount</label>
+          <input
+            type="number"
+            id="amount"
+            placeholder="Enter amount...(-expense, +income)"
+          />
+        </div>
+        <button class="btn">Add transaction</button>
+      </form>
+    </div>
   </body>
 </html>
